--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: #191970;
     color: white;
 }
 
